--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'admin_layout.html' %} <!-- Extends admin layout -->
+{% extends 'admin_layout.html' %} 
 {% block content %}
   <div class="container">
     {% if Quizzes %}
@@ -11,18 +11,18 @@
                 <ul class="list-unstyled">
                   <li><strong>Chapter:</strong> {{ quiz.chapter.name }}</li>
                   <li><strong>Date:</strong> {{ quiz.date_of_quiz }}</li>
-                  <li><strong>Duration:</strong> {{ quiz.time_duration }} mins</li>
+                  <li><strong>Duration:</strong> {{ quiz.time_duration }}</li>
                   <li><strong>Remarks:</strong> {{ quiz.remarks }}</li>
                   <li><strong>Number of Questions:</strong> {{ quiz.questions|length }}</li>
                 </ul>
                 <div class="d-flex justify-content-between">
-                  <!-- Edit button for quiz -->
+                  
                   <a href="/edit_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
-                  <!-- Delete button for quiz -->
+                  
                   <a href="/delete_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-danger btn-sm" 
                      onclick="return confirm('Are you sure you want to delete this quiz?')">Delete</a>
                 </div>
-                <!-- Add Question button for each quiz -->
+                
                 <div class="d-flex justify-content-between mt-3">
                   <a href="/add_question/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-sm">+ Add Question</a>
                 </div>
