--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'admin_layout.html' %} 
+{% extends 'admin_layout.html' %}
 {% block content %}
   <div class="container">
     {% if Quizzes %}
@@ -16,15 +16,15 @@
                   <li><strong>Number of Questions:</strong> {{ quiz.questions|length }}</li>
                 </ul>
                 <div class="d-flex justify-content-between">
-                  
                   <a href="/edit_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
-                  
                   <a href="/delete_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-danger btn-sm" 
                      onclick="return confirm('Are you sure you want to delete this quiz?')">Delete</a>
                 </div>
                 
                 <div class="d-flex justify-content-between mt-3">
                   <a href="/add_question/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-sm">+ Add Question</a>
+                  <!-- Edit Questions Button -->
+                  <a href="/edit_questions/{{ quiz.id }}/{{ name }}" class="btn btn-info btn-sm">Edit Questions</a>
                 </div>
               </div>
             </div>
