--- a/templates/start_quiz.html
+++ b/templates/start_quiz.html
@@ -25,25 +25,25 @@
                 </label>
                 <div class="mt-2">
                   <div class="form-check option-card">
-                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option1_{{ question.id }}" value="option1" required>
+                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option1_{{ question.id }}" value="{{ question.option1 }}" required>
                     <label class="form-check-label" for="option1_{{ question.id }}">
                       {{ question.option1 }}
                     </label>
                   </div>
                   <div class="form-check option-card">
-                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option2_{{ question.id }}" value="option2" required>
+                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option2_{{ question.id }}" value="{{ question.option2 }}" required>
                     <label class="form-check-label" for="option2_{{ question.id }}">
                       {{ question.option2 }}
                     </label>
                   </div>
                   <div class="form-check option-card">
-                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option3_{{ question.id }}" value="option3" required>
+                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option3_{{ question.id }}" value="{{ question.option3 }}" required>
                     <label class="form-check-label" for="option3_{{ question.id }}">
                       {{ question.option3 }}
                     </label>
                   </div>
                   <div class="form-check option-card">
-                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option4_{{ question.id }}" value="option4" required>
+                    <input class="form-check-input" type="radio" name="question_{{ question.id }}" id="option4_{{ question.id }}" value="{{ question.option4 }}" required>
                     <label class="form-check-label" for="option4_{{ question.id }}">
                       {{ question.option4 }}
                     </label>
