--- a/templates/edit_questions.html
+++ b/templates/edit_questions.html
@@ -11,8 +11,11 @@
           <li class="list-group-item">
             <strong>{{ question.question_statement }}</strong>
             <div class="d-flex justify-content-between">
-              <!-- Button to edit each question -->
               <a href="/edit_question/{{ question.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
+
+              <form action="/delete_question/{{ question.id }}/{{ name }}" method="POST" style="display:inline;">
+                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+              </form>
             </div>
           </li>
         {% endfor %}
