--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -36,7 +36,7 @@
       </div>
     </nav>
     {% block content %}
-    <!-- Content block to be filled dynamically from child templates -->
+    <!-- block content idhar -->
     {% endblock %}
   </body>
 </html>
