--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -28,7 +28,7 @@
             <li class="nav-item"><a class="nav-link text-white" href="/scores/{{name}}">Scores</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
           </ul>
-          <form class="d-flex my-2 my-lg-0" method="POST" action="/search/{{name}}">
+          <form class="d-flex my-2 my-lg-0" method="POST" action="user/search/{{name}}">
             <input class="form-control me-sm-2" type="text" placeholder="Search" name="search_txt" id="search_txt">
             <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
           </form>
