--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -1,8 +1,8 @@
 {% extends "user_layout.html" %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="row justify-content-center">
+<div class="container min-vh-100 d-flex justify-content-center align-items-center mt-5">
+  <div class="row justify-content-center w-100">
     <div class="col-md-6">
       <div class="card">
         <div class="card-header text-center">
