--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
     <div class="container">
-      <span class="navbar-brand text-white">Welcome {{ name[:-10] | title}}</span>
+      <span class="navbar-brand text-white">Welcome Admin</span>
 
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav me-auto mt-2 mt-lg-0">
@@ -23,7 +23,7 @@
           <li class="nav-item"><a class="nav-link text-white" href="/quiz/{{name}}">Quiz</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
         </ul>
-        <form class="d-flex my-2 my-lg-0" method="POST" action="admin/search/{{name}}">
+        <form class="d-flex my-2 my-lg-0" method="POST" action="/adminsearch/{{name}}">
           <input class="form-control me-sm-2" type="text" placeholder="Search Here" name="search_txt" id="search_txt">
           <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
         </form>
