--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -6,50 +6,77 @@
             <h2 class="text-center">Upcoming Quizzes</h2>
         </div>
 
-        {% if quizzes %}
+        {% if quizzes or chapters %}
         <div class="row">
-            {% for quiz in quizzes %}
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card">
-                    <img src="/static/images/Q.png" class="card-img-top" alt="Upcoming Quizzes" />
-                    <div class="card-body">
-                        <h4 class="card-title text-danger fw-bold">📘 {{ quiz.name }}</h4>
-                        <p class="card-text">
-                            <i class="far fa-question-circle"></i> Number of Questions: {{ quiz.questions | length }}<br>
-                            <i class="far fa-calendar-alt"></i> Scheduled Date: {{ quiz.date_of_quiz.strftime('%d/%m/%Y') }}<br>
-                            <i class="far fa-clock"></i> Duration: {{ quiz.time_duration }}<br>
-                        </p>
-                        <div class="btn-spacing">
-                            <a href="/view_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-info btn-lg w-100">
-                                <i class="fas fa-eye"></i> View Quiz
-                            </a>
+            <!-- Display Quizzes -->
+            {% if quizzes %}
+            <div class="col-12">
+                <div class="row">
+                    {% for quiz in quizzes %}
+                    <div class="col-md-6 col-lg-4 mb-4">
+                        <div class="card">
+                            <img src="/static/images/Q.png" class="card-img-top" alt="Upcoming Quizzes" />
+                            <div class="card-body">
+                                <h4 class="card-title text-danger fw-bold">📘 {{ quiz.name }}</h4>
+                                <p class="card-text">
+                                    <i class="far fa-question-circle"></i> Number of Questions: {{ quiz.questions | length }}<br>
+                                    <i class="far fa-calendar-alt"></i> Scheduled Date: {{ quiz.date_of_quiz.strftime('%d/%m/%Y') }}<br>
+                                    <i class="far fa-clock"></i> Duration: {{ quiz.time_duration }}<br>
+                                </p>
+                                <div class="btn-spacing">
+                                    <a href="/view_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-info btn-lg w-100">
+                                        <i class="fas fa-eye"></i> View Quiz
+                                    </a>
 
-                            {% if quiz.date_of_quiz == today %}
-                                <!-- quiz live -->
-                                <a href="/start_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-lg w-100 mt-2">
-                                    <i class="fas fa-play"></i> Start Quiz
-                                </a>
-                            {% elif quiz.date_of_quiz > today %}
-                                <!-- quiz abhi live nhi-->
-                                <button class="btn btn-warning btn-lg w-100 mt-2" onclick="alert('Quiz will be live on {{ quiz.date_of_quiz }}')">
-                                    <i class="fas fa-clock"></i> Not Live Yet
-                                </button>
-                            {% else %}
-                                <!-- quiz date passed -->
-                                <button class="btn btn-danger btn-lg w-100 mt-2" onclick="alert('Quiz date has passed!')">
-                                    <i class="fas fa-times-circle"></i> Expired
-                                </button>
-                            {% endif %}
+                                    {% if quiz.date_of_quiz == today %}
+                                    <a href="/start_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-lg w-100 mt-2">
+                                        <i class="fas fa-play"></i> Start Quiz
+                                    </a>
+                                    {% elif quiz.date_of_quiz > today %}
+                                    <button class="btn btn-warning btn-lg w-100 mt-2">
+                                        <i class="fas fa-clock"></i> Not Live Yet
+                                    </button>
+                                    {% else %}
+                                    <button class="btn btn-danger btn-lg w-100 mt-2">
+                                        <i class="fas fa-times-circle"></i> Expired
+                                    </button>
+                                    {% endif %}
+                                </div>
+                            </div>
                         </div>
-                    
                     </div>
+                    {% endfor %}
                 </div>
             </div>
-            {% endfor %}
+            {% endif %}
+
+            <!-- Display Chapters -->
+            {% if chapters %}
+            <div class="col-12 mt-4">
+                <h3>Chapters</h3>
+                <div class="row">
+                    {% for chapter in chapters %}
+                    <div class="col-md-6 col-lg-4 mb-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class="card-title text-primary fw-bold">📖 {{ chapter.name }}</h4>
+                                <p class="card-text">
+                                    <i class="far fa-file-alt"></i> Description: {{ chapter.description or 'No description available.' }}<br>
+                                    <i class="far fa-bookmark"></i> Subject: {{ chapter.subject.name }}<br>
+                                </p>
+                                <a href="/view_chapter/{{ chapter.id }}/{{ name }}" class="btn btn-info btn-lg w-100">
+                                    <i class="fas fa-eye"></i> View Chapter
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endif %}
         </div>
         {% else %}
-        <p>No upcoming quizzes found</p>
+        <p><b>No results found for your search.</b></p>
         {% endif %}
     </div>
 {% endblock content %}
-
