--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -4,7 +4,7 @@
   <div class="container">
     <h4>Edit Question for Quiz: {{ quiz.name }}</h4>
     
-    <!-- Form for editing the question -->
+    <!-- Form for editing question -->
     <form action="/edit_question/{{ question.id }}/{{ name }}" method="POST">
       <div class="mb-3">
         <label for="question_statement" class="form-label">Question Statement</label>
