--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -16,10 +16,9 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <!-- Navigation Bar -->
+    <!-- navigation bar-->
     <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
       <div class="container">
-        <!-- Added style="font-weight: bold;" to make the welcome message bold -->
         <span class="navbar-brand text-white" style="font-weight: bold;">Welcome {{ name[:-10] | title}}</span>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
