--- a/templates/add_subjects.html
+++ b/templates/add_subjects.html
@@ -9,7 +9,7 @@
             <h4>Add Subjects</h4>
           </div>
           <div class="card-body">
-            <form action="/add_subjects/{{name}}" method="POST">
+            <form action="/add_subjects" method="POST">
               <div class="mb-3">
                 <label for="subject_name" class="form-label">Subject Name</label>
                 <input type="text" class="form-control" name="subject_name" id="subject_name" placeholder="Subject Name" required>
@@ -20,7 +20,7 @@
               </div>
               <div class="mb-3 d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="/admin_dashboard/{{name}}" type="button" class="btn btn-primary">Cancel</a>
+                <a href="/admin_dashboard" type="button" class="btn btn-primary">Cancel</a>
               </div>
             </form>
           </div>
